# grabsentinel-demo

./: .dockerignore  .env.bak  .env.bak2  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  database.py  main.py  models.py  security.py
app/routers/: auth.py
app/services/: mailer.py  otp_generator.py  otp_verifier.py
app/templates/: base.html  login.html  signup.html  verify_otp.html  welcome.html
