[project]
name = "test-auth-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-cli>=0.0.24",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "resend>=2.30.1",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.47.0",
]
